--- a/loanShark.css
+++ b/loanShark.css
@@ -1,13 +1,13 @@
 body {
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    background: #F0F8FF;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #666666;
 }
 
 #content {
     width: 600px;
     margin: 10px auto;
     padding: 5px 20px;
-    background: #5F9EA0;
+    background: #FFFFFF;
     border: 1px solid #000000;
 }
 
@@ -16,7 +16,7 @@ h1 {
 }
 
 p {
-	color: white;
+	color: blue;
 	font-weight: bold;
 	text-align: center;
 }
