--- a/ho9.css
+++ b/ho9.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;  
+    background-image: url("ho9image.jpg");
     background-color: teal;
     margin: 10px auto;
     width: 750px;
@@ -7,12 +8,12 @@ body {
     border: 5px grey;
 }
 h1 {
-	color: white;
+	color: navy;
 	text-align: center;
 }
 
 p {
-    color: silver;
+    color: SlateBlue;
 	text-align: center;
 }
 
@@ -41,6 +42,6 @@ textarea {
 	font-size: 150%;
 }
 #fib {
-	color: silver;
+	color: SlateBlue;
 	font-weight: bold;
 }
